--- a/Homepage/public/index.html
+++ b/Homepage/public/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="image-container1">
-        <img src="gallery1.png" alt="Image" class="image">
+        <img src="image/gallery1.png" alt="Image" class="image">
     </div>
 
 
