--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <nav class="navigation">
         <a href="#">Home</a>
         <a href="#">About</a>
-        <a href="#">Product</a>
+        <a href="product.html">Product</a>
         <a href="#">staff</a>
         <button class="btnLogin-popup">Login</button>
     </nav>        
@@ -87,7 +87,7 @@
     </div>
 
     <div class="image-container1">
-        <img src="image/gallery1.png" alt="Image" class="image">
+        <img src="gallery1.png" alt="Image" class="image">
     </div>
 
 
